--- a/css/main.css
+++ b/css/main.css
@@ -1,26 +1,96 @@
 :root {
-    --primary-color: #1d5888;
-    --secondary-color: #ff993b;
+    --primary-color: #854119;
+    --secondary-color: #faba0a;
     --dark-color: #292929;
     --white-color: #f3f3f3;
 }
 
 body {
     color: var(--dark-color);
+    background-color: var(--primary-color);
 }
 
 nav {
-    background-color: var(--dark-color);
+    background-color: var(--primary-color);
 }
 
+.navbar-toggler-icon {
+    color: var(--secondary-color);
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+
+.custom-toggler-icon {
+    color: var(--secondary-color);
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+
+.navbar-toggler:focus {
+    box-shadow: none;
+}
+.nav-content-font {
+    font-family: 'Baloo 2', cursive;
+    
+}
+
+.nav-content-color {
+    color: var(--secondary-color);
+}
+
+.nav-content-color:hover {
+    color: var(--white-color)
+}
+
+/* === Main === */
 main>.container {
     padding: 60px 15px 0;
     margin-bottom: 5rem;
 }
 
+p {
+    font-family: 'Lexend Deca', sans-serif;
+    color: var(--white-color);
+}
+
+.main-content-heading-font {
+    font-family: 'Baloo 2', cursive;
+}
+
+.main-content-sub-font {
+    font-family: 'Lexend Deca', sans-serif;
+}
+
+
+.main-content-sub-color {
+    color: var(--white-color)
+}
 
 h1,h2,h3,h4,h5,h6 {
+    color: var(--secondary-color);
+    
+}
+
+/* === Buttons === */
+.btn-gold-outline {
+    border: 1px solid var(--secondary-color);
     color: var(--primary-color);
+}
+
+.btn-gold-solid {
+    background-color: var(--secondary-color);
+}
+
+.btn-gold-solid:hover {
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    border: 2px solid var(--secondary-color);
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+        0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.btn-gold-solid:focus {
+    box-shadow: none;
 }
 
 .bsicon-color {
@@ -53,22 +123,27 @@ code[class*="language-"], pre[class*="language-"] {
 
 /* === Footer === */
 footer {
-    background-color: var(--dark-color);
+    background-color: var(--primary-color);
+    
 }
 
+.footer-text-color {
+    color: var(--secondary-color);
+}
 footer.footer-text {
     font-size: 16px;
+    font-family: 'Lexend Deca', sans-serif;
 }
 
 footer .social>a {
-    color: var(--white-color);
+    color: var(--secondary-color);
     opacity: 0.75;
 
 }
 
 footer .social>a:hover{
     opacity: 0.90;
-    color: var(--secondary-color);
+    color: var(--white-color);
 }
 
 
