Update brand color when hovered

--- a/css/main.css
+++ b/css/main.css
@@ -35,8 +35,13 @@ nav {
     
 }
 
+
 .nav-content-color {
     color: var(--secondary-color);
+}
+
+.nav-content-color:hover {
+    color: var(--white-color)
 }
 
 a.nav-link:link {
